<resources>
    <string name="app_name">ERMS Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="wave_image">wave image</string>
    <string name="login_to_your_company">Login To Your Company</string>
    <string name="login_below_with_your_credentials">Login Below With Your Credentials</string>
    <string name="password">Password</string>
    <string name="register_your_company">Register Your Company</string>
    <string name="provide_your_company_information_to_get_started">Provide Your Company Information To Get Started</string>
    <string name="company_name">Company Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="content_description_media">add employee icon</string>
    <string name="title">Add Employee</string>
    <string name="secondary_text">Please add an employee to the company.</string>
    <string name="nested_scroll_view">Nested Scroll View Description</string>
    <string name="name">Name</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_emp_sub_heading">Please provide the employee information to register in the company, and Get Started.</string>
    <string name="cnic_employee_id">CNIC / Employee ID</string>
    <string name="website">Website</string>
    <string name="email_example">example@gmail.com</string>
    <string name="phone_example">03331234567</string>
    <string name="pakistan">Pakistan</string>
    <string name="kust">KUST</string>
    <string name="basic_information">Basic Information</string>
    <string name="site_example">kust.edu.pk</string>
    <string name="feature_name">Feature Name</string>
    <string name="department">Department Name</string>
    <string name="manager">Manager</string>
    <string name="job_title">Designation/Job Title</string>
    <string name="basic_pay">Basic Pay</string>
    <string name="joining_date">Joining Date</string>
    <string name="update">Update</string>
    <string name="State">state</string>
    <string name="select_manager">Select Manager</string>
    <string name="loading">Loading…</string>
    <string name="set_pin">Set PIN</string>
    <string name="about">About</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="message">Message</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="you_can_use_biometric">You can use biometric</string>
    <string name="no_biometric_feature">No biometric features available on this device.</string>
    <string name="biometric_features_are_currently_unavailable">Biometric features are currently unavailable.</string>
    <string name="the_user_hasn_t_associated_any_biometric_credentials">The user hasn\'t associated any biometric credentials with their account.</string>
    <string name="set_biometric">Enable Biometric</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="project_proposal">Project Proposal</string>
    <string name="success">Success</string>
    <string name="successful_message">Successfully selected Manager!</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_password">Remember Password!</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="required">Password Required</string>
    <string name="password_not_match">Password Not Match</string>
    <string name="remove">Remove</string>
    <string name="continue_">Continue</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="security_update_required">Security Update Required!</string>
    <string name="biometric_not_supported">Biometric Not Supported</string>
    <string name="biometric_status_unknown">Sorry, Status Unknown</string>
    <string name="authentication_error">Authentication Error: %1$s</string>
    <string name="complaint_title">Complaint Title</string>
    <string name="status">Status</string>
    <string name="event_description">Desicription</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="add_complaint">Add Complaint</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="cover_image">Cover Image</string>
    <string name="full_address">Full Address</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="gender">Gender</string>
    <string name="state">State</string>
    <string name="chat">Chat</string>
    <string name="button_send">Send Message</string>
    <string name="time">Time</string>
</resources>