<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/btn_layout_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Continue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/md_theme_light_onPrimary" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_login_again"
        app:layout_constraintStart_toStartOf="@+id/btn_layout_continue" />

    <Button
        android:id="@+id/btn_login_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_layout_continue"
        app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_layout_continue" />


</androidx.constraintlayout.widget.ConstraintLayout>